# cmake_minimum_required(VERSION <specify CMake version here>)
project(folder_2018_04_30__09_18_33__539)

set(CMAKE_CXX_STANDARD 11)

add_executable(folder_2018_04_30__09_18_33__539
        bookingrequest.cpp
        bookingrequest.h
        flightleg.cpp
        flightleg.h
        flightplan.h
        global.cpp
        global.h
        main.cpp
        scenario.cpp
        scenario.h)
